@@ -74,6 +74,7 @@ public:
         , is_dav_comment(false)
         , lock_creationdate(0)
         , lock_expirationdate(0)
+        , unversioned(false)
     {
     }
     CItem
@@ -114,6 +115,7 @@ public:
         , lock_expirationdate (lock_expirationdate)
         , absolutepath (absolutepath)
         , repository (repository)
+        , unversioned(false)
     {
     }
 
@@ -132,6 +134,7 @@ public:
     bool                has_props;
     bool                is_external;
     bool                complete;
+    bool                unversioned;
 
     /// number of levels up the local path hierarchy to find the external spec.
     /// -1, if this is not an external
